# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  04 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py
  pym/portage_dep.py: Added remove_preferentials() method to the DependSpec
  class. Simplified PkgGlue to just being a container.

  03 May 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild.sh 
  portage.txt pym/ebuild.py bin/ebuild-default-functions.sh:
  Change internal variable BUILDDIR to PORTAGE_BUILDDIR #68269.

  03 May 2005; Mike Frysinger <vapier@gentoo.org> bin/dodoc bin/doinfo 
  bin/newdoc bin/newman bin/prepallman bin/prepallinfo:
  Clean up code a bit to make it smaller and nicer.

  03 May 2005; Mike Frysinger <vapier@gentoo.org> bin/doman:
  Remove old unused options (-x11/-gnome/-kde/etc...) and cleanup.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py
  pym/portage_dep.py: Fixed some bugs in the new intersects() and
  encapsulates() methods. Created a transform_dependspec() function that
  reorders DependSpec elements based on supplied preferences.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Added methods for modifying DependSpec externally.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Added intersects() and encapsulates() functions to the Atom class for
  comparing relationships between similar atoms.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> man/portage.5:
  Removed invalid example from package.keywords section.

  03 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_dep.py
  pym/portage_syntax.py: Mostly completed DependSpec and started on
  TargetGraph.

  29 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/doman: